@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/loader.l: Prevent excess whitespace while saving objects.
+Andreas Kirschbaum 2006-02-27
+
 Apply patch by Marc Alexander Lehmann to improve server performance.
 ---
 include/map.h: Move path field to end of struct. Since this field was huge it
